test/error/unterminated_comment_header.true
File 0, line 1, col 0 - 2:
unterminated comment

